added SEO properties

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,9 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
+        <a class="navbar-brand" title="Margareta Krajnikovics" href="index.html"
+          >Margareta Krajnikovics</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -47,14 +49,34 @@
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              title="Home"
+              href="index.html"
               >Home</a
             >
-            <a class="nav-link" href="about.html" target="_blank">About me</a>
-            <a class="nav-link" href="my-projects.html" target="_blank"
+            <a
+              class="nav-link"
+              href="about.html"
+              title="About me"
+              target="_blank"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="my-projects.html"
+              title="My projects"
+              target="_blank"
               >My projects</a
             >
-            <a class="nav-link" href="contact.html" target="_blank">Contact</a>
+            <a
+              class="nav-link"
+              href="contact.html"
+              title="Contact"
+              target="_blank"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -81,28 +103,46 @@
           </div>
           <div>
             <a
-              href="#"
+              href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
-              title="my projects"
+              title="My projects"
               >My projects</a
             >
           </div>
         </div>
         <div>
           <div class="icons text-center">
-            <a href="https://www.instagram.com/rita__25/" target="_blank">
+            <a
+              href="https://www.instagram.com/rita__25/"
+              title="Instargram"
+              target="_blank"
+            >
               <i class="fa-brands fa-instagram"></i>
             </a>
 
-            <a href="https://github.com/Ritulja" target="_blank">
+            <a href="https://github.com/Ritulja" title="GitHub" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
 
-            <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
+            <a
+              href="mailto:margareta.krajnikovics@gmail.com"
+              title="Email"
+              target="_blank"
+            >
               <i class="fa-solid fa-envelope"></i>
             </a>
           </div>
         </div>
+        <p class="coded-by text-center">
+          This project was coded by Margareta Krajnikovics, and it is
+          <a
+            href="https://github.com/Ritulja/my-portfolio-project"
+            title="Open-source on GitHub"
+            target="_blank"
+          >
+            open-sourced.</a
+          >
+        </p>
       </footer>
     </div>
   </body>
