--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Margareta Krajnikovics is a front-end developer from Ukraine, based in London."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,12 +30,14 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <title>Margareta Krajnikovics - Portfolio</title>
+    <title>Front-end developer - Margareta Krajnikovics</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
+        <a class="navbar-brand" title="Margareta Krajnikovics" href="index.html"
+          >Margareta Krajnikovics</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -46,12 +52,34 @@
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="about.html" target="_blank">About me</a>
-            <a class="nav-link" href="my-projects.html" target="_blank"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              title="Home"
+              href="index.html"
+              >Home</a
+            >
+            <a
+              class="nav-link"
+              href="about.html"
+              title="About me"
+              target="_blank"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="my-projects.html"
+              title="My projects"
+              target="_blank"
               >My projects</a
             >
-            <a class="nav-link" href="contact.html" target="_blank">Contact</a>
+            <a
+              class="nav-link"
+              href="contact.html"
+              title="Contact"
+              target="_blank"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -178,26 +206,45 @@
             <a
               href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
-              title="my projects"
+              title="My projects"
+              target="_blank"
               >My projects</a
             >
           </div>
         </div>
         <div>
           <div class="icons text-center">
-            <a href="https://www.instagram.com/rita__25/" target="_blank">
+            <a
+              href="https://www.instagram.com/rita__25/"
+              title="Instargram"
+              target="_blank"
+            >
               <i class="fa-brands fa-instagram"></i>
             </a>
 
-            <a href="https://github.com/Ritulja" target="_blank">
+            <a href="https://github.com/Ritulja" title="GitHub" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
 
-            <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
+            <a
+              href="mailto:margareta.krajnikovics@gmail.com"
+              title="Email"
+              target="_blank"
+            >
               <i class="fa-solid fa-envelope"></i>
             </a>
           </div>
         </div>
+        <p class="coded-by text-center">
+          This project was coded by Margareta Krajnikovics, and it is
+          <a
+            href="https://github.com/Ritulja/my-portfolio-project"
+            title="Open-source on GitHub"
+            target="_blank"
+          >
+            open-sourced.</a
+          >
+        </p>
       </footer>
     </div>
   </body>
