--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Margareta Krajnikovics is a front-end developer based in London. "
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,12 +31,14 @@
     ></script>
     <link rel="stylesheet" href="/styles/style.css" />
     <a href="/about.html"></a>
-    <title>About Margareta Krajnikovics</title>
+    <title>About front-end developer - Margareta Krajnikovics</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
+        <a class="navbar-brand" title="Margareta Krajnikovics" href="index.html"
+          >Margareta Krajnikovics</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -47,14 +53,34 @@
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              title="Home"
+              href="index.html"
               >Home</a
             >
-            <a class="nav-link" href="about.html" target="_blank">About me</a>
-            <a class="nav-link" href="my-projects.html" target="_blank"
+            <a
+              class="nav-link"
+              href="about.html"
+              title="About me"
+              target="_blank"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="my-projects.html"
+              title="My projects"
+              target="_blank"
               >My projects</a
             >
-            <a class="nav-link" href="contact.html" target="_blank">Contact</a>
+            <a
+              class="nav-link"
+              href="contact.html"
+              title="Contact"
+              target="_blank"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -86,9 +112,10 @@
         </div>
         <div>
           <a
-            href="#skills-contact"
+            href="my-projects.html"
             class="btn btn-branding about-me-button"
             title="View all projects"
+            target="_blank"
             >View all projects</a
           >
         </div>
@@ -99,6 +126,7 @@
           <h3>
             <a
               href="mailto:margareta.krajnikovics@gmail.com"
+              title="margareta.krajnikovics@gmail.com"
               class="about-me-contact-email"
             >
               margareta.krajnikovics@gmail.com</a
@@ -106,7 +134,7 @@
           </h3>
           <div>
             <a
-              href="#skills-contact"
+              href="mailto:margareta.krajnikovics@gmail.com"
               class="btn btn-branding about-me-contact-button"
               title="Contact me"
               >Contact me</a
@@ -124,26 +152,45 @@
             <a
               href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
-              title="my projects"
+              title="My projects"
+              target="_blank"
               >My projects</a
             >
           </div>
         </div>
         <div>
           <div class="icons text-center">
-            <a href="https://www.instagram.com/rita__25/" target="_blank">
+            <a
+              href="https://www.instagram.com/rita__25/"
+              title="Instargram"
+              target="_blank"
+            >
               <i class="fa-brands fa-instagram"></i>
             </a>
 
-            <a href="https://github.com/Ritulja" target="_blank">
+            <a href="https://github.com/Ritulja" title="GitHub" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
 
-            <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
+            <a
+              href="mailto:margareta.krajnikovics@gmail.com"
+              title="Email"
+              target="_blank"
+            >
               <i class="fa-solid fa-envelope"></i>
             </a>
           </div>
         </div>
+        <p class="coded-by text-center">
+          This project was coded by Margareta Krajnikovics, and it is
+          <a
+            href="https://github.com/Ritulja/my-portfolio-project"
+            title="Open-source on GitHub"
+            target="_blank"
+          >
+            open-sourced.</a
+          >
+        </p>
       </footer>
     </div>
   </body>
