updated my-project page

--- a/my-projects.html
+++ b/my-projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Projects coded by Margareta, front-end developer based in London"
+      content="Projects created by Margareta, front-end developer based in London"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -110,7 +110,8 @@
                   <img src="images/line3.png" class="line-left" alt="line" />
                 </h2>
                 <h3 class="text-center">
-                  Build using HTML, CSS and JavaScript
+                  This was my first attempt of creating a web page using HTML,
+                  CSS and JavaScript.
                 </h3>
                 <a
                   href="#"
@@ -130,7 +131,8 @@
                   <img src="images/line3.png" class="line-left" alt="line" />
                 </h2>
                 <h3 class="text-center">
-                  Build using HTML, CSS and JavaScript
+                  Weather App Project is a fully functioning Weather App. It was
+                  built with HTML, CSS and JavaScript using OpenWeatherMap API.
                 </h3>
                 <a
                   href="#"
