--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact here Margareta Krajnikovics, front-end developer based in London"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +31,7 @@
     ></script>
     <link rel="stylesheet" href="/styles/style.css" />
     <a href="/about.html"></a>
-    <title>Document</title>
+    <title>Comtact Margareta Krajnikovics</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
@@ -89,7 +93,10 @@
           <img src="images/line3.png" class="line-left" alt="line" />
         </h1>
         <h3>
-          <a href="mailto:margareta.krajnikovics@gmail.com">
+          <a
+            href="mailto:margareta.krajnikovics@gmail.com"
+            title="margareta.krajnikovics@gmail.com"
+          >
             margareta.krajnikovics@gmail.com</a
           >
         </h3>
@@ -106,6 +113,7 @@
               href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
               title="My projects"
+              target="_blank"
               >My projects</a
             >
           </div>
