--- a/my-projects.html
+++ b/my-projects.html
@@ -135,7 +135,8 @@
                   built with HTML, CSS and JavaScript using OpenWeatherMap API.
                 </h3>
                 <a
-                  href="#"
+                  href="https://creative-taffy-0b961f.netlify.app"
+                  target="_blank"
                   class="btn btn-branding my-project-main-button"
                   title="my projects"
                   >View project details</a
