completed responsive footer

--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
       <div class="about-me-contact">
         <div class="about-me-contact-container text-center">
           <h2>Contact me</h2>
-          <h3>
+          <h3 class="contact-me-email">
             <a
               href="mailto:margareta.krajnikovics@gmail.com"
               title="margareta.krajnikovics@gmail.com"
@@ -132,6 +132,7 @@
               margareta.krajnikovics@gmail.com</a
             >
           </h3>
+
           <div>
             <a
               href="mailto:margareta.krajnikovics@gmail.com"
@@ -143,12 +144,10 @@
         </div>
       </div>
       <footer>
-        <div class="contact-box d-flex justify-content-between mb-5">
-          <div>
+        <div class="go-to-portfolio-footer">
+          <div class="contact-box d-flex justify-content-between mb-5">
             <h2>Go to my portfolio</h2>
-            <h3 class="text-muted">to check out my projects</h3>
-          </div>
-          <div>
+
             <a
               href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
