--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     ></script>
     <link rel="stylesheet" href="/styles/style.css" />
     <a href="/about.html"></a>
-    <title>Comtact Margareta Krajnikovics</title>
+    <title>Contact Margareta Krajnikovics</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
@@ -92,23 +92,21 @@
           <span>Contact me</span>
           <img src="images/line3.png" class="line-left" alt="line" />
         </h1>
-        <h3>
+        <h3 >
           <a
             href="mailto:margareta.krajnikovics@gmail.com"
             title="margareta.krajnikovics@gmail.com"
           >
-            margareta.krajnikovics@gmail.com</a
-          >
+          <span class="contact-me-email"> margareta.krajnikovics@gmail.com</a
+          ></span> 
         </h3>
       </div>
 
       <footer>
-        <div class="contact-box d-flex justify-content-between mb-5">
-          <div>
+        <div class="go-to-portfolio-footer">
+          <div class="contact-box d-flex justify-content-between mb-5">
             <h2>Go to my portfolio</h2>
-            <h3 class="text-muted">to check out my projects</h3>
-          </div>
-          <div>
+
             <a
               href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
