--- a/index.html
+++ b/index.html
@@ -197,12 +197,10 @@
       </div>
 
       <footer>
-        <div class="contact-box d-flex justify-content-between mb-5">
-          <div>
+        <div class="go-to-portfolio-footer">
+          <div class="contact-box d-flex justify-content-between mb-5">
             <h2>Go to my portfolio</h2>
-            <h3 class="text-muted">to check out my projects</h3>
-          </div>
-          <div>
+
             <a
               href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
@@ -212,6 +210,7 @@
             >
           </div>
         </div>
+
         <div>
           <div class="icons text-center">
             <a
