--- a/my-projects.html
+++ b/my-projects.html
@@ -152,46 +152,19 @@
               </div>
             </div>
           </div>
-          <div class="container my-projects-container">
-            <div class="row">
-              <div class="col-md-6">
-                <img
-                  src="images/in-progress.png"
-                  title="in progress"
-                  class="img-fluid project-imgs"
-                  alt="in progress"
-                />
-              </div>
-              <div class="col-md-6 project-content">
-                <h2 class="mb-4 text-center">
-                  Dictionary Project
-                  <img src="images/line3.png" class="line-left" alt="line" />
-                  <img src="images/line3.png" class="line-left" alt="line" />
-                </h2>
-                <h3 class="text-center">In progress...</h3>
-                <a
-                  href="#"
-                  class="btn btn-branding my-project-main-button"
-                  title="my projects"
-                  >In progress...</a
-                >
-              </div>
-            </div>
-          </div>
         </div>
       </div>
 
       <footer>
-        <div class="contact-box d-flex justify-content-between mb-5">
-          <div>
+        <div class="go-to-portfolio-footer">
+          <div class="contact-box d-flex justify-content-between mb-5">
             <h2>Go to my portfolio</h2>
-            <h3 class="text-muted">to check out my projects</h3>
-          </div>
-          <div>
+
             <a
               href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
               title="My projects"
+              target="_blank"
               >My projects</a
             >
           </div>
