added responsive certificate

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-md-4 img-1">
+          <div class="col-md-3 img-1">
             <div class="nioly-pic">
               <img
                 src="images/nioly.png"
@@ -176,7 +176,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 img-2">
+          <div class="col-md-3 img-2">
             <img
               src="images/intro-to-code.png"
               class="img-fluid shadow"
@@ -185,12 +185,20 @@
             />
           </div>
 
-          <div class="col-md-4 img-3">
+          <div class="col-md-3 img-3">
             <img
               src="images/front-end.png"
               class="img-fluid shadow"
               title="Front-end developer"
               alt="Front-end developer certificate"
+            />
+          </div>
+          <div class="col-md-3 img-3">
+            <img
+              src="images/responsive-certificate.png"
+              class="img-fluid shadow"
+              title="Responsive Web Development"
+              alt="Responsive Web Development Certificate"
             />
           </div>
         </div>
