added book club project link

--- a/my-projects.html
+++ b/my-projects.html
@@ -114,7 +114,8 @@
                   CSS and JavaScript.
                 </h3>
                 <a
-                  href="#"
+                  href="https://eloquent-cocada-c7336f.netlify.app"
+                  target="_blank"
                   class="btn btn-branding my-project-main-button"
                   title="my projects"
                   >View project details</a
