added project description

--- a/my-projects.html
+++ b/my-projects.html
@@ -111,7 +111,7 @@
                 </h2>
                 <h3 class="text-center">
                   This was my first attempt of creating a web page using HTML,
-                  CSS and JavaScript.
+                  CSS and JavaScript. The project is not responsive.
                 </h3>
                 <a
                   href="https://eloquent-cocada-c7336f.netlify.app"
